[package]
name = "licrobe-gui"
version = "0.1.0"
authors = ["AshGreyG <ashgrey.huaier@gmail.com>"]
description = "Linux sensitive directory monitoring and rule scanning software."
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
licrobe-core = { path = "../../core", features = ["tauri"] }
tauri = { version = "1.5", features = [
    "api-all",
    "shell-open",
    "notification",
    "dialog",
    "fs",
    "process"
] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[features]
default = []
dev = ["tauri/dev"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"